<resources>

    <string name="app_name">RepBase</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Authorization</string>
    <string name="application">Rep Base</string>
    <string name="groups_tab">группы</string>
    <string name="btnEnterIntoGroupText">Вступить в группу</string>
    <string name="btnCreateNewGroupText">Создать новую группу</string>
    <string name="tvGroupsGreetingText">Вы состоите в группах:</string>
    <string name="tvGroupsGreetingTextFail">Вы не состоите ни в одной группе</string>
    <string name="btnGenerateAccCodeText">Сгенерировать новый</string>
    <string name="btnLeaveGroupText">Выйти из группы</string>
    <string name="btnDeleteGroupText">Удалить группу</string>
    <string name="btnBackText">Назад</string>
    <string name="btnOkText">Ок</string>
    <string name="btnCancelText">Отмена</string>
    <string name="tvAccCodePromptText">Код доступа</string>
    <string name="wrongAccCode">Неверный код</string>
    <string name="successEnterIntoGroup">Вы вошли в группу: </string>
    <string name="successLeaveGroup">Вы вышли из группы: </string>
    <string name="successDelGroup">Группа удалена</string>
    <string name="successCreateGroup">Группа создана</string>
    <string name="dlgAccCodeTitle">группа </string>
    <string name="tvGroupMemberHeder">участники:</string>
    <string name="tvGroupMemberEmptyHeder">в группе нет участников</string>
    <string name="tvNewGroup">введите название группы</string>
    <string name="errCancelRep">Не удалось отменить репетицию</string>
    <string name="okCancelRep">Репетиция успешно отменена</string>
    <string name="tvBaseRoomsCount">Залов: </string>
    <string name="tvNoData">Нет данных</string>
    <string name="tvChoseBase">Выберите репитиционную базу: </string>
    <string name="repCost">Стоимость за час: </string>
    <string name="tvChoseRoom">Выберите зал: </string>
    <string name="square">Площадь: </string>
    <string name="city">Город: </string>
    <string name="adderss">Адрес: </string>
    <string name="description">Описание: </string>
    <string name="room">Зал: </string>
    <string name="base">Точка: </string>
    <string name="btnReserveText">Забронировать репетицию</string>
    <string name="schedule">Расписание</string>
    <string name="rub">руб.</string>
    <string name="meter">м</string>
    <string name="pick_room_time">Выберите время</string>
    <string name="pick_group">Выберите группу</string>
    <string name="self_group">без группы</string>
    <string name="deleteGroup">Удалить группу?</string>
    <string name="leaveGroup">Выйти из группы?</string>
    <string name="successCreateRep">Репетиция создана</string>

</resources>