<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAccCodePromptText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvAccCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGenerateAccCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerateAccCodeText" />

    <TextView
        android:id="@+id/tvGroupMemberHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/llGroupMemberBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btnLeaveGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLeaveGroupText" />

    <Button
        android:id="@+id/btnDeleteGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteGroupText" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBackText" />

</LinearLayout>